k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color
spec:
  type: NodePort
  selector:
    app: skills
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
