k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: skills-alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: skills-public-a, skills-public-c
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 Forbidden"}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /v1/color
            pathType: Exact
            backend:
              service:
                name: color
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: response-403
                port:
                  name: use-annotation
